# Simple_File_Integrity_Checker

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml
examples/: demo.md
examples/demo-clean/: app.conf  users.conf
examples/demo-modified/: app.conf  suspicious.conf
sific/: baseline.py  cli.py  hachage.py  validation.py
tests/: test_baseline.py  test_cli.py  test_hachage.py  test_validation.py
