[project]
name = "sific"
version = "0.1.0"
description = "Simple File Integrity Checker - A lightweight CLI tool to generate and verify file hashes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "SG1Unitis" }
]
keywords = ["hash", "integrity", "sha256", "cli", "cybersecurity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.scripts]
sific = "sific.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []